--- a/src/index.css
+++ b/src/index.css
@@ -21,4 +21,5 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  background: url('./assets/background.jpg') center/cover no-repeat;
 }
