--- a/src/index.css
+++ b/src/index.css
@@ -37,10 +37,23 @@ body {
   }
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+
 .slide-in {
   animation: slideInFromRight 2s ease-in-out;
 }
 
 .slide-in-2 {
   animation: slideInFromRight 2.2s ease-in-out;
+}
+
+.fade-in {
+  animation: fadeIn 2s ease-in-out;
 }
