--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,15 @@ body {
   }
 }
 
+@keyframes menuSlideIn {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 .slide-in {
   animation: slideInFromRight 2s ease-in-out;
 }
@@ -55,6 +64,11 @@ body {
 
 .fade-in {
   animation: fadeIn 2s ease-in-out;
+}
+
+.menu-slide-in {
+  animation: menuSlideIn 0.5s ease-in-out forwards;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .items-container {
