--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,21 @@ body {
   }
 }
 
+@keyframes popInMessage {
+  0% {
+    transform: translateX(100%);
+  }
+  40% {
+    transform: translateX(0);
+  }
+  60% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
 .slide-in {
   animation: slideInFromRight 2s ease-in-out;
 }
@@ -68,7 +83,10 @@ body {
 
 .menu-slide-in {
   animation: menuSlideIn 0.5s ease-in-out forwards;
-  transition: opacity 0.5s ease-in-out;
+}
+
+.pop-in {
+  animation: popInMessage 2s ease-in-out;
 }
 
 .items-container {
